--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог магазина инструмента Техномарт</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i|PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
-
 <body>
   <header>
     <section class="header-top">
@@ -156,53 +157,56 @@
       </div>
       <ul class="product-list">
         <li class="perforator">
-          <img src="#" alt="BFG 3000">
+          <img src="img/BFG3000.jpg" alt="BFG 3000">
           <p>Перфоратор BOSCH BFG 3000</p>
           <span class="old-price">22500 Р.</span>
           <b class="new-price">15500</b>
         </li>
         <li class="perforator">
-          <img src="#" alt="BFG 6000">
+          <img src="img/BFG6000.jpg" alt="BFG 6000">
           <p>Перфоратор BOSCH BFG 6000</p>
           <span class="old-price">30500 Р.</span>
           <b class="new-price">25500</b>
         </li>
-        <li class="perforator perforator-new">
-          <img src="#" alt="BFG 2000">
+        <li class="perforator perforator-buy">
+          <div class="buy">
+            <a href="" class="in-cart">Купить</a>
+            <a href="" class="in-bookletter">В закладки</a>
+          </div>
           <p>Перфоратор BOSCH BFG 2000</p>
           <b class="new-price">12500</b>
         </li>
         <li class="perforator">
-          <img src="#" alt="BFG 3000">
+          <img src="img/BFG3000.jpg" alt="BFG 3000">
           <p>Перфоратор BOSCH BFG 3000</p>
           <span class="old-price">22500 Р.</span>
           <b class="new-price">15500</b>
         </li>
         <li class="perforator">
-          <img src="#" alt="BFG 6000">
+          <img src="img/BFG6000.jpg" alt="BFG 6000">
           <p>Перфоратор BOSCH BFG 6000</p>
           <span class="old-price">30500 Р.</span>
           <b class="new-price">25500</b>
         </li>
         <li class="perforator">
-          <img src="#" alt="BFG 2000">
+          <img src="img/BFG2000.jpg" alt="BFG 2000">
           <p>Перфоратор BOSCH BFG 2000</p>
           <b class="new-price">12500</b>
         </li>
         <li class="perforator perforator-new">
-          <img src="#" alt="BFG 3000">
+          <img src="img/BFG3000.jpg" alt="BFG 3000">
           <p>Перфоратор BOSCH BFG 3000</p>
           <span class="old-price">22500 Р.</span>
           <b class="new-price">15500</b>
         </li>
         <li class="perforator">
-          <img src="#" alt="BFG 6000">
+          <img src="img/BFG6000.jpg" alt="BFG 6000">
           <p>Перфоратор BOSCH BFG 6000</p>
           <span class="old-price">30500 Р.</span>
           <b class="new-price">25500</b>
         </li>
         <li class="perforator">
-          <img src="#" alt="BFG 2000">
+          <img src="img/BFG2000.jpg" alt="BFG 2000">
           <p>Перфоратор BOSCH BFG 2000</p>
           <b class="new-price">12500</b>
         </li>
@@ -274,6 +278,14 @@
       </div>
     </aside>
   </footer>
+  <div class="modal modal-in-cart">
+    <div class="notice">
+      <h3>Товар добавлен в корзину!</h3>
+    </div>
+    <a href="">Оформить заказ</a>
+    <a href="">Продолжить покупки</a>
+    <button href="" class="modal-close"></button>
+  </div>
 </body>
 
 </html>
