--- a/index.html
+++ b/index.html
@@ -4,70 +4,78 @@
 <head>
   <meta charset="utf-8">
   <title>Магазин строительного инструмента Technomart</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i|PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <section class="header-top">
-      <div class="header-logo">
-        <a href="">
-          <h1 class="logo">Техномарт</h1>
-        </a>
-      </div>
-      <div class="search-field">
-        <input type="search" name="nav-search" placeholder="Поиск">
-      </div>
-      <div class="bookmarks">
-        <a href="">Закладки</a>
-      </div>
-      <div class="cart">
-        <a href="">Корзина</a>
-      </div>
-      <div class="order">
-        <a href="">Оформить заказ</a>
-      </div>
-    </section>
-    <section class="intro-login">
-      <h2>Интернет магазин строительных материалов и инструментов для ремонта</h2>
-      <p class="intro-contacts-phone">
-        +7 (812) 555-05-55
-      </p>
-      <p class="intro-contacts-adress">
-        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-      </p>
-      <div class="login">
-        <a href="#">Войти</a>
-        <a href="#">Регистрация</a>
-      </div>
-    </section>
-    <nav class="main-navigation">
-      <ul class="main-navigation-list">
-        <li class="main-navigation-item">Главная</li>
-        <li class="main-navigation-item">Компания</li>
-        <li class="main-navigation-item">Каталог</li>
-        <li class="main-navigation-item">Новости</li>
-        <li class="main-navigation-item">Спецпредложения</li>
-        <li class="main-navigation-item">Доставка</li>
-        <li class="main-navigation-item">Контакты</li>
-      </ul>
-    </nav>
+    <div class="top-wrapper">
+      <section class="header-top">
+        <h1 class="visually-hidden">Магазин строительного инструмента Техномарт</h1>
+        <div class="header-logo-container">
+          <a class="header-logo" href="">
+            Техномарт
+          </a>
+        </div>
+        <div class="search-field">
+          <input type="search" name="nav-search" placeholder="Поиск">
+        </div>
+        <div class="top-item">
+          <a href="">Закладки</a>
+        </div>
+        <div class="top-item">
+          <a href="">Корзина</a>
+        </div>
+        <div class="top-item active">
+          <a href="">Оформить заказ</a>
+        </div>
+      </section>
+    </div>
+    <div class="bottom-wrapper">
+      <section class="intro-login">
+        <h2 class="visually-hidden">магазин Техномарт</h2>
+        <p class="intro-about">Интернет магазин строительных материалов и инструментов для ремонта</p>
+        <p class="intro-contacts-phone">
+          +7 (812) 555-05-55
+        </p>
+        <p class="intro-contacts-adress">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        </p>
+        <div class="login">
+          <a class="button-login" href="#">Войти</a>
+          <a class="button-login" href="#">Регистрация</a>
+        </div>
+      </section>
+      <nav class="main-navigation">
+        <ul class="main-navigation-list">
+          <li class="main-navigation-item"><a href="#">Главная</a></li>
+          <li class="main-navigation-item"><a href="#">Компания</a></li>
+          <li class="main-navigation-item"><a href="#">Каталог</a></li>
+          <li class="main-navigation-item"><a href="#">Новости</a></li>
+          <li class="main-navigation-item"><a href="#">Спецпредложения</a></li>
+          <li class="main-navigation-item"><a href="#">Доставка</a></li>
+          <li class="main-navigation-item"><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <main>
     <article class="offers">
       <h2 class="visually-hidden">Что наш магазин может предложить.</h2>
-      <section class="offer-item new-offer">
+      <section class="offer-item first-offer">
         <h3>Материалы</h3>
         <a href="">На любой вкус</a>
       </section>
-      <section class="offer-item">
+      <section class="offer-item second-offer">
         <h3>Инструмент</h3>
         <a href="">На все случаи</a>
       </section>
-      <section class="offer-item">
+      <section class="offer-item third-offer">
         <h3>Техника</h3>
         <a href="">Для стройки</a>
       </section>
-      <div class="offer-item offer-slider">
+      <div class="offer-slider">
         <input type="radio" id="slider-1" name="slide" checked>
         <input type="radio" id="slider-2" name="slide">
         <div class="slider-controls">
@@ -79,23 +87,23 @@
           <button class="slider-arrow slider-arrow arrow-right" type="button" data-direction="right">Вперед</button>
         </div>
         <div class="slider-inner">
-          <section class="slider-item">
+          <section class="slider-item-first">
             <h3>Дрели</h3>
             <p>Соседям на радость</p>
-            <a href="">Открыть каталог</a>
+            <a class="open-catalog" href="">Открыть каталог</a>
           </section>
-          <section class="slider-item">
+          <section class="slider-item-second">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
-            <a href="">Открыть каталог</a>
+            <a class="open-catalog" href="">Открыть каталог</a>
           </section>
         </div>
       </div>
-      <section class="offer-item">
+      <section class="offer-item fourth-offer">
         <h3>Скидки 50%</h3>
         <a href="">На 350 товаров</a>
       </section>
-      <section class="offer-item">
+      <section class="offer-item fives-offer">
         <h3>Доставка</h3>
         <a href="">Бесплатно</a>
       </section>
@@ -111,26 +119,26 @@
       </div>
       <ul class="popular-products-list">
         <li class="popular-products-item">
-          <img src="#" alt="BFG 9000">
+          <img src="img/BFG9000.jpg" alt="BFG 9000">
           <p>Перфоратор BOSCH BFG 9000</p>
           <span class="old-price">32500 Р.</span>
-          <b class="new-price">25500</b>
+          <b class="new-price">25500 Р.</b>
         </li>
         <li class="popular-products-item">
-          <img src="#" alt="BFG 3000">
+          <img src="img/BFG3000.jpg" alt="BFG 3000">
           <p>Перфоратор BOSCH BFG 3000</p>
           <span class="old-price">22500 Р.</span>
-          <b class="new-price">15500</b>
+          <b class="new-price">15500 Р.</b>
         </li>
         <li class="popular-products-item">
-          <img src="#" alt="BFG 6000">
+          <img src="img/BFG6000.jpg" alt="BFG 6000">
           <p>Перфоратор BOSCH BFG 6000</p>
           <span class="old-price">30500 Р.</span>
-          <b class="new-price">25500</b>
+          <b class="new-price">25500 Р.</b>
         </li>
         <li class="popular-products-item products-item-new">
-          <img src="#" alt="BFG 2000">
-          <p>Перфоратор BOSCH BFG 2000</p>
+          <img src="img/BFG2000.jpg" alt="BFG 2000">
+          <p>Перфоратор BOSCH BFG 2000 Р.</p>
           <b class="new-price">12500 Р.</b>
         </li>
       </ul>
@@ -138,7 +146,7 @@
     <section class="popular-vendors">
       <div class="popular-vendors-header">
         <div class="popular-vendors-header-left">
-          <h2>Популярные производители</h2>
+          <h3>Популярные производители</h3>
         </div>
         <div class="popular-vendors-header-right">
           <a href="#">Все производители</a>
@@ -146,71 +154,73 @@
       </div>
       <ul class="popular-vendors-list">
         <li class="popular-vendors-item">
-          <img src="#" alt="Bosch">
+          <img src="img/bosch.jpg" alt="Bosch">
         </li>
         <li class="popular-vendors-item">
-          <img src="#" alt="Makita">
+          <img src="img/Makita.jpg" alt="Makita">
         </li>
         <li class="popular-vendors-item">
-          <img src="#" alt="DeWalt">
+          <img src="img/DeWalt.jpg" alt="DeWalt">
         </li>
         <li class="popular-vendors-item">
-          <img src="#" alt="Интерскол">
+          <img src="img/Интерскол.jpg" alt="Интерскол">
         </li>
         <li class="popular-vendors-item">
-          <img src="#" alt="Hitachi">
+          <img src="img/Hitachi.jpg" alt="Hitachi">
         </li>
         <li class="popular-vendors-item">
-          <img src="#" alt="LG">
+          <img src="img/LG.jpg" alt="LG">
         </li>
         <li class="popular-vendors-item">
-          <img src="#" alt="AEG">
+          <img src="img/AEG.jpg" alt="AEG">
         </li>
         <li class="popular-vendors-item">
-          <img src="#" alt="Metabo">
+          <img src="img/Metabo.jpg" alt="Metabo">
         </li>
       </ul>
     </section>
-    <section class="services">
-      <h3>Сервисы</h3>
-      <p>
-        Хороший интернет-магазин отличается от плохого не только ценами!
-        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
-      </p>
-      <div class="service-sliders">
-        <input type="radio" id="service-slider-1" name="service-slide" checked>
-        <input type="radio" id="service-slider-2" name="service-slide">
-        <input type="radio" id="service-slider-3" name="service-slide">
-        <div class="slider-controls">
-          <label for="service-slider-1"></label>
-          <label for="service-slider-2"></label>
-          <label for="service-slider-3"></label>
+    <div class="bottom-wrapper">
+      <section class="services">
+        <h3>Сервисы</h3>
+        <p>
+          Хороший интернет-магазин отличается от плохого не только ценами!<br />
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+        </p>
+        <div class="service-sliders">
+          <input type="radio" id="service-slider-1" name="service-slide" checked>
+          <input type="radio" id="service-slider-2" name="service-slide">
+          <input type="radio" id="service-slider-3" name="service-slide">
+          <div class="slider-controls">
+            <label for="service-slider-1">Доставка</label>
+            <label for="service-slider-2">Гарантия</label>
+            <label for="service-slider-3">Кредит</label>
+          </div>
+          <ul class="service-slider-inner">
+            <li class="service-slider slider-delivery">
+              <h4>Доставка</h4>
+              <p>Мы с удовольствием доставим ваш товар прямо
+                к вашему подъезду совершенно бесплатно!
+                Ведь мы неплохо заработаем, </p>
+            </li>
+            <li class="service-slider slider-guarantee">
+              <h4>Гарантия</h4>
+              <p>
+                Если купленный у нас товар поломается или заискрит,
+                а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+                Дом уж восстановите как-нибудь сами.</p>
+            </li>
+            <li class="service-slider slider-credit">
+              <h4>Кредит</h4>
+              <p>Залезть в долговую яму стало проще!
+                Кредитные консультанты придут вам на помощь.</p>
+            </li>
+          </ul>
         </div>
-        <ul class="service-slider-inner">
-          <li class="service-slider slider-delivery">
-            <h4>Доставка</h4>
-            <p>Мы с удовольствием доставим ваш товар прямо
-              к вашему подъезду совершенно бесплатно!
-              Ведь мы неплохо заработаем, </p>
-          </li>
-          <li class="service-slider slider-guarantee">
-            <h4>Гарантия</h4>
-            <p>
-              Если купленный у нас товар поломается или заискрит,
-              а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
-              Дом уж восстановите как-нибудь сами.</p>
-          </li>
-          <li class="service-slider slider-credit">
-            <h4>Кредит</h4>
-            <p>Залезть в долговую яму стало проще!
-              Кредитные консультанты придут вам на помощь.</p>
-          </li>
-        </ul>
-      </div>
-    </section>
+      </section>
+    </div>
     <article class="about-us">
       <h2 class="visually-hidden">Описание и контакты интернет магазина Техномарт</h2>
-      <section>
+      <section class="details">
         <h3>Компания «Техномарт»</h3>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России!
@@ -218,7 +228,7 @@
         <b>Деловые линии</b>
         <b>Автотрейдинг</b>
         <b>ЖелДорЭкспедиция</b>
-        <a href="">Подробнее о компании</a>
+        <a class="button-au button-detail" href="">Подробнее о компании</a>
       </section>
       <section class="contacts">
         <h3>Контакты</h3>
@@ -228,62 +238,90 @@
             <img src="#" alt="Уменьшенная карта">
           </a>
         </div>
-        <a href="">Заблудились? Напишите нам!</a>
+        <a class="button-au button--contacts" href="">Заблудились? Напишите нам!</a>
       </section>
     </article>
   </main>
   <footer>
-    <nav class="footer-navigation">
-      <div class="footer-logo-container">
-        <h3 class="footer-logo">
-          Техномарт
-        </h3>
-      </div>
-      <ul class="footer-up-menu">
-        <li class="footer-up-item">Компания</li>
-        <li class="footer-up-item">Новости</li>
-        <li class="footer-up-item">Каталог</li>
-        <li class="footer-up-item">Доставка</li>
-        <li class="footer-up-item">Контакты</li>
-      </ul>
-      <div class="footer-item-adress">
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <p>+7 (812) 555-05-55</p>
-      </div>
-      <ul class="footer-menu-down">
-        <li class="footer-down-item">Материалы</li>
-        <li class="footer-down-item">Техника</li>
-        <li class="footer-down-item">Инструмент</li>
-        <li class="footer-down-item">Спецпредложения</li>
-      </ul>
-    </nav>
-    <aside class="page-footer">
-      <div class="copyright">
-        <p>2010-2017 Компания "Техномарт" Все права защищены</p>
-      </div>
-      <div class="socials">
-        <ul class="social-list">
-          <li class="social-vk">
-            <span class="visually-hidden">Вконтакте</span>
-          </li>
-          <li class="social-fb">
-            <span class="visually-hidden">Фейсбук</span>
-          </li>
-          <li class="social-inst">
-            <span class="visually-hidden">Инстаграм</span>
-          </li>
+    <div class="footer-top-wrapper">
+      <nav class="footer-navigation">
+        <div class="footer-logo-container">
+          <a class="footer-logo">Техномарт</a>
+        </div>
+        <ul class="footer-up-menu">
+          <li class="footer-up-item">Компания</li>
+          <li class="footer-up-item">Новости</li>
+          <li class="footer-up-item">Каталог</li>
+          <li class="footer-up-item">Доставка</li>
+          <li class="footer-up-item">Контакты</li>
         </ul>
-      </div>
-      <div class="feedback">
-        <p>Обратная связь:</p>
-        <b>mail.htmlacademy.ru</b>
-      </div>
-      <div class="developer">
-        <p>Разработано — </p>
-        <b>htmlacademy.ru</b>
-      </div>
-    </aside>
+        <div class="footer-item-adress">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>+7 (812) 555-05-55</p>
+        </div>
+        <ul class="footer-menu-down">
+          <li class="footer-down-item">Материалы</li>
+          <li class="footer-down-item">Техника</li>
+          <li class="footer-down-item">Инструмент</li>
+          <li class="footer-down-item">Спецпредложения</li>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer-down-wrapper">
+      <aside class="page-footer">
+        <div class="copyright">
+          <p>2010-2017 Компания "Техномарт" Все права защищены</p>
+        </div>
+        <div class="socials">
+          <ul class="social-list">
+            <li class="social-vk">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                  <path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z" /></svg>
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="social-fb">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                  <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg>
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li class="social-inst">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                  <path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z" /></svg>
+                <span class="visually-hidden">Инстаграм</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="feedback">
+          <p>Обратная связь:</p>
+          <b>mail.htmlacademy.ru</b>
+        </div>
+        <div class="developer">
+          <p>Разработано — </p>
+          <b>htmlacademy.ru</b>
+        </div>
+      </aside>
+    </div>
   </footer>
+  <div class="modal modal-write-us">
+    <form action="">
+      <label for="name">Ваше имя:</label>
+      <input type="text" name="name" id="name" placeholder="Представьтесь, пожалуйста">
+      <label for="email">Ваш e-mail:</label>
+      <input type="text" name="email" id="email" placeholder="Для отправки ответа">
+      <label for="letter">Текст письма:</label>
+      <textarea name="letter" id="letter" cols="30" rows="10" placeholder="В свободной форме"></textarea>
+      <button type="submit">Отправить</button>
+    </form>
+  </div>
+  <div class="modal modal-map">
+  </div>
+  </div>
 </body>
 
 </html>
