--- a/index.html
+++ b/index.html
@@ -6,60 +6,74 @@
   <title>Магазин строительного инструмента Technomart</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic-ext" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <div class="top-wrapper">
-      <section class="header-top">
+      <section class="header-top container">
         <h1 class="visually-hidden">Магазин строительного инструмента Техномарт</h1>
-        <div class="header-logo-container">
-          <a class="header-logo" href="">
-            Техномарт
+        <a class="header-logo" href="#">
+          Техномарт
+        </a>
+        <div class="search-field-container">
+          <input class="search-field" type="search" name="nav-search" placeholder="Поиск:">
+          <button class="search-btn" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path fill="#6a7180" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" /></svg>
+          </button>
+        </div>
+        <div class="top-item">
+          <a class="top-link link-blue" href="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
+              <path fill="#6a7180" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z" /></svg>
+            Закладки: 0
           </a>
-        </div>
-        <div class="search-field">
-          <input type="search" name="nav-search" placeholder="Поиск">
-        </div>
-        <div class="top-item">
-          <a href="">Закладки</a>
-        </div>
-        <div class="top-item">
-          <a href="">Корзина</a>
-        </div>
-        <div class="top-item active">
-          <a href="">Оформить заказ</a>
+          <a class="top-link link-blue" href="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+              <circle fill="#6a7180" cx="4.5" cy="13.5" r="1.5" />
+              <circle fill="#6a7180" cx="12.5" cy="13.5" r="1.5" />
+              <path fill="#6a7180" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>
+            Корзина: 0
+          </a>
+          <a class="top-link link-green active" href="">Оформить заказ</a>
         </div>
       </section>
     </div>
     <div class="bottom-wrapper">
-      <section class="intro-login">
+      <section class="intro-login container">
         <h2 class="visually-hidden">магазин Техномарт</h2>
-        <p class="intro-about">Интернет магазин строительных материалов и инструментов для ремонта</p>
-        <p class="intro-contacts-phone">
-          +7 (812) 555-05-55
-        </p>
-        <p class="intro-contacts-adress">
-          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-        </p>
-        <div class="login">
+        <div class="intro-wrapper about">
+          <p>Интернет магазин строительных материалов<br />и инструментов для ремонта</p>
+        </div>
+        <div class="intro-wrapper contacts">
+          <p class="intro-phone">
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19"><path fill="#B7BFC8" d="M15.572 18.985h-.941c-4.129-.488-7.157-2.408-9.359-4.864C3.062 11.66 1.318 8.492.978 4.228V3.084c.078-.774.459-1.304.898-1.757C2.425.766 3.25.044 4.002.019c.554-.018 1.5.38 1.879.899.329.446.504 1.339.656 2.003.154.671.505 1.643.408 2.289-.148 1.007-1.487 1.434-1.879 2.166 1.307 3.135 3.443 5.439 6.293 7.031.715-.392 1.346-1.572 2.332-1.595.359-.009.818.178 1.184.286.402.121.75.275 1.104.408.596.224 1.648.521 2.004 1.021.365.513.57 1.356.49 1.879-.164 1.041-1.879 2.197-2.901 2.579z"/></svg>
+            <span>+7 (812) 555-05-55</span>
+          </p>
+          <p class="intro-adress">
+            <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+          </p>
+        </div>
+        <div class="intro-wrapper login">
           <div class="login-enter">
-            <a class="button-login" href="#">Войти</a>
-            <a class="button-login" href="#">Регистрация</a>
+            <a class="button-login enter" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/><path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/></svg>
+              Войти
+            </a>
+            <a class="button-login reg" href="#">Регистрация</a>
           </div>
         </div>
       </section>
-      <nav class="main-navigation">
-        <ul class="main-navigation-list">
-          <li class="main-navigation-item"><a href="#">Главная</a></li>
-          <li class="main-navigation-item"><a href="#">Компания</a></li>
-          <li class="main-navigation-item"><a href="#">Каталог</a></li>
-          <li class="main-navigation-item"><a href="#">Новости</a></li>
-          <li class="main-navigation-item"><a href="#">Спецпредложения</a></li>
-          <li class="main-navigation-item"><a href="#">Доставка</a></li>
-          <li class="main-navigation-item"><a href="#">Контакты</a></li>
-        </ul>
+      <nav class="main-navigation container">
+        <a class="main-navigation-item" href="#">Главная</a>
+        <a class="main-navigation-item" href="#">Компания</a>
+        <a class="main-navigation-item" href="#">Каталог</a>
+        <a class="main-navigation-item" href="#">Новости</a>
+        <a class="main-navigation-item" href="#">Спецпредложения</a>
+        <a class="main-navigation-item" href="#">Доставка</a>
+        <a class="main-navigation-item" href="#">Контакты</a>
       </nav>
     </div>
   </header>
@@ -312,7 +326,7 @@
     </div>
   </footer>
   <div class="modal modal-write-us">
-    <form action="https://echo.htmlacademy.ru"  method="post">
+    <form action="https://echo.htmlacademy.ru" method="post">
       <label for="name">Ваше имя:</label>
       <input type="text" name="name" id="name" placeholder="Представьтесь, пожалуйста">
       <label for="email">Ваш e-mail:</label>
