--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <section class="popular-products">
       <div class="popular-products-header">
         <div class="popular-products-header-left">
-          <h3>Популярные товары</h3>
+          <h3>Популярные товары:</h3>
         </div>
         <div class="popular-products-header-right">
           <a href="#">Все популярные товары</a>
@@ -174,27 +174,75 @@
       </div>
       <ul class="popular-products-list">
         <li class="popular-products-item">
-          <img src="img/BFG9000.jpg" alt="BFG 9000">
+          <figure class="image-block big-image">
+            <img src="img/BFG9000.jpg" alt="BFG 9000">
+          </figure>
           <p class="item-name">Перфоратор BOSCH BFG 9000</p>
           <span class="old-price">32500 Р.</span>
           <b class="new-price">25500 Р.</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+                <circle fill="#92c178" cx="4.5" cy="13.5" r="1.5" />
+                <circle fill="#92c178" cx="12.5" cy="13.5" r="1.5" />
+                <path fill="#92c178" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>
+              Купить
+            </a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="popular-products-item">
-          <img src="img/BFG3000.jpg" alt="BFG 3000">
+          <figure class="image-block">
+            <img src="img/BFG3000.jpg" alt="BFG 3000">
+          </figure>
           <p class="item-name">Перфоратор BOSCH BFG 3000</p>
           <span class="old-price">22500 Р.</span>
           <b class="new-price">15500 Р.</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+                <circle fill="#92c178" cx="4.5" cy="13.5" r="1.5" />
+                <circle fill="#92c178" cx="12.5" cy="13.5" r="1.5" />
+                <path fill="#92c178" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>
+              Купить
+            </a>
+            <a href="#" class="button-hover in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="popular-products-item">
-          <img src="img/BFG6000.jpg" alt="BFG 6000">
+          <figure class="image-block">
+            <img src="img/BFG6000.jpg" alt="BFG 6000">
+          </figure>
           <p class="item-name">Перфоратор BOSCH BFG 6000</p>
           <span class="old-price">30500 Р.</span>
           <b class="new-price">25500 Р.</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+                <circle fill="#92c178" cx="4.5" cy="13.5" r="1.5" />
+                <circle fill="#92c178" cx="12.5" cy="13.5" r="1.5" />
+                <path fill="#92c178" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>
+              Купить
+            </a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="popular-products-item products-item-new">
-          <img src="img/BFG2000.jpg" alt="BFG 2000">
-          <p class="item-name">Перфоратор BOSCH BFG 2000 Р.</p>
+          <figure class="image-block">
+            <img src="img/BFG2000.jpg" alt="BFG 2000">
+          </figure>
+          <p class="item-name">Перфоратор BOSCH BFG 2000</p>
           <b class="new-price">12500 Р.</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+                <circle fill="#92c178" cx="4.5" cy="13.5" r="1.5" />
+                <circle fill="#92c178" cx="12.5" cy="13.5" r="1.5" />
+                <path fill="#92c178" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>
+              Купить
+            </a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
       </ul>
     </section>
