--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <h3>Популярные товары:</h3>
         </div>
         <div class="popular-products-header-right">
-          <a href="#">Все популярные товары</a>
+          <a class="button-pv button-product" href="#">Все популярные товары</a>
         </div>
       </div>
       <ul class="popular-products-list">
@@ -249,36 +249,36 @@
     <section class="popular-vendors">
       <div class="popular-vendors-header">
         <div class="popular-vendors-header-left">
-          <h3>Популярные производители</h3>
+          <h3>Популярные производители:</h3>
         </div>
         <div class="popular-vendors-header-right">
-          <a href="#">Все производители</a>
+          <a class="button-pv button-vendor"href="#">Все производители</a>
         </div>
       </div>
       <ul class="popular-vendors-list">
         <li class="popular-vendors-item">
-          <img src="img/bosch.jpg" alt="Bosch">
+          <a href=""><img src="img/bosch.jpg" alt="Bosch"></a>
         </li>
         <li class="popular-vendors-item">
-          <img src="img/Makita.jpg" alt="Makita">
+            <a href=""><img src="img/Makita.jpg" alt="Makita"></a>
         </li>
         <li class="popular-vendors-item">
-          <img src="img/DeWalt.jpg" alt="DeWalt">
+            <a href=""><img src="img/DeWalt.jpg" alt="DeWalt"></a>
         </li>
         <li class="popular-vendors-item">
-          <img src="img/Интерскол.jpg" alt="Интерскол">
+            <a href=""><img src="img/Интерскол.jpg" alt="Интерскол"></a>
         </li>
         <li class="popular-vendors-item">
-          <img src="img/Hitachi.jpg" alt="Hitachi">
+            <a href=""><img src="img/Hitachi.jpg" alt="Hitachi"></a>
         </li>
         <li class="popular-vendors-item">
-          <img src="img/LG.jpg" alt="LG">
+            <a href=""><img src="img/LG.jpg" alt="LG"></a>
         </li>
         <li class="popular-vendors-item">
-          <img src="img/AEG.jpg" alt="AEG">
+            <a href=""><img src="img/AEG.jpg" alt="AEG"></a>
         </li>
         <li class="popular-vendors-item">
-          <img src="img/Metabo.jpg" alt="Metabo">
+            <a href=""><img src="img/Metabo.jpg" alt="Metabo"></a>
         </li>
       </ul>
     </section>
