--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <a href=""><img src="img/Makita.jpg" alt="Makita"></a>
         </li>
         <li class="popular-vendors-item">
-            <a href=""><img src="img/DeWalt.jpg" alt="DeWalt"></a>
+            <a href=""><img src="img/DeWALT.jpg" alt="DeWalt"></a>
         </li>
         <li class="popular-vendors-item">
             <a href=""><img src="img/Интерскол.jpg" alt="Интерскол"></a>
