--- a/index.html
+++ b/index.html
@@ -258,28 +258,28 @@
       </div>
       <ul class="popular-vendors-list">
         <li class="popular-vendors-item">
-          <a href=""><img src="img/bosch.jpg" alt="Bosch"></a>
+          <a href="https://www.bosch.ru/"><img src="img/bosch.jpg" alt="Bosch"></a>
         </li>
         <li class="popular-vendors-item">
-            <a href=""><img src="img/Makita.jpg" alt="Makita"></a>
+            <a href="http://www.makita.ru/"><img src="img/Makita.jpg" alt="Makita"></a>
         </li>
         <li class="popular-vendors-item">
-            <a href=""><img src="img/DeWALT.jpg" alt="DeWalt"></a>
+            <a href="http://www.dewalt.ru/"><img src="img/DeWALT.jpg" alt="DeWalt"></a>
         </li>
         <li class="popular-vendors-item">
-            <a href=""><img src="img/Интерскол.jpg" alt="Интерскол"></a>
+            <a href="http://www.interskol.ru/"><img src="img/Интерскол.jpg" alt="Интерскол"></a>
         </li>
         <li class="popular-vendors-item">
-            <a href=""><img src="img/Hitachi.jpg" alt="Hitachi"></a>
+            <a href="http://www.hitachi.ru/"><img src="img/Hitachi.jpg" alt="Hitachi"></a>
         </li>
         <li class="popular-vendors-item">
-            <a href=""><img src="img/LG.jpg" alt="LG"></a>
+            <a href="https://www.lg.com/ru"><img src="img/LG.jpg" alt="LG"></a>
         </li>
         <li class="popular-vendors-item">
-            <a href=""><img src="img/AEG.jpg" alt="AEG"></a>
+            <a href="https://www.aeg.ru/"><img src="img/AEG.jpg" alt="AEG"></a>
         </li>
         <li class="popular-vendors-item">
-            <a href=""><img src="img/Metabo.jpg" alt="Metabo"></a>
+            <a href="https://www.metabo.com/ru/"><img src="img/Metabo.jpg" alt="Metabo"></a>
         </li>
       </ul>
     </section>
