--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
       </div>
       <ul class="popular-products-list">
-        <li class="popular-products-item">
+        <li class="popular-products-item" tabindex="0">
           <figure class="image-block big-image">
             <img src="img/BFG9000.jpg" alt="BFG 9000">
           </figure>
@@ -192,7 +192,7 @@
             <a href="#" class="in-bookletter">В закладки</a>
           </div>
         </li>
-        <li class="popular-products-item">
+        <li class="popular-products-item" tabindex="0">
           <figure class="image-block">
             <img src="img/BFG3000.jpg" alt="BFG 3000">
           </figure>
@@ -210,7 +210,7 @@
             <a href="#" class="button-hover in-bookletter">В закладки</a>
           </div>
         </li>
-        <li class="popular-products-item">
+        <li class="popular-products-item" tabindex="0">
           <figure class="image-block">
             <img src="img/BFG6000.jpg" alt="BFG 6000">
           </figure>
@@ -228,7 +228,7 @@
             <a href="#" class="in-bookletter">В закладки</a>
           </div>
         </li>
-        <li class="popular-products-item products-item-new">
+        <li class="popular-products-item products-item-new" tabindex="0">
           <figure class="image-block">
             <img src="img/BFG2000.jpg" alt="BFG 2000">
           </figure>
