--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <nav class="main-navigation container">
         <a class="main-navigation-item" href="#">Главная</a>
         <a class="main-navigation-item" href="#">Компания</a>
-        <a class="main-navigation-item" href="#">Каталог</a>
+        <a class="main-navigation-item" href="catalog.html">Каталог</a>
         <a class="main-navigation-item" href="#">Новости</a>
         <a class="main-navigation-item" href="#">Спецпредложения</a>
         <a class="main-navigation-item" href="#">Доставка</a>
@@ -233,6 +233,7 @@
               <img src="img/BFG2000.jpg" alt="BFG 2000">
             </figure>
             <p class="item-name">Перфоратор BOSCH BFG 2000</p>
+            <span class="empty-price"></span>
             <b class="new-price">12500 Р.</b>
             <div class="item-actions">
               <a href="#" class="in-cart">
@@ -350,11 +351,11 @@
         <h3>Контакты</h3>
         <p>Вы можете забрать товар сами,<br /> заехав в наш офис:</p>
         <div class="map-wrapper">
-          <a href="" class="image-wrapper">
+          <a href="#" class="image-wrapper modal-map-show">
             <img src="img/mini-map.jpg" alt="Уменьшенная карта">
           </a>
         </div>
-        <a class="button-au button-contacts" href="">Заблудились? Напишите нам!</a>
+        <a class="button-au modal-show" href="">Заблудились? Напишите нам!</a>
       </section>
     </article>
   </main>
@@ -369,7 +370,7 @@
             <ul class="footer-up-menu">
               <li class="footer-up-item"><a href="">Компания</a></li>
               <li class="footer-up-item"><a href="">Новости</a></li>
-              <li class="footer-up-item"><a href="">Каталог</a></li>
+              <li class="footer-up-item"><a href="catalog.html">Каталог</a></li>
               <li class="footer-up-item"><a href="">Доставка</a></li>
               <li class="footer-up-item"><a href="">Контакты</a></li>
             </ul>
@@ -409,18 +410,28 @@
         </aside>
       </div>
   </footer>
-  <div class="modal modal-write-us">
+  <div class="modal-write-us">
+    <button class="modal-close">закрыть</button>
     <form action="https://echo.htmlacademy.ru" method="post">
-      <label for="name">Ваше имя:</label>
+      <div class="write-form">
+      <label class="write-input">Ваше имя:<br />
       <input type="text" name="name" id="name" placeholder="Представьтесь, пожалуйста">
-      <label for="email">Ваш e-mail:</label>
+      </label>
+      <label class="write-input">Ваш e-mail:<br />
       <input type="text" name="email" id="email" placeholder="Для отправки ответа">
-      <label for="letter">Текст письма:</label>
-      <textarea name="letter" id="letter" cols="30" rows="10" placeholder="В свободной форме"></textarea>
-      <button type="submit">Отправить</button>
+      </label>
+      <label class="write-text">Текст письма:<br />
+      <textarea name="letter" id="letter" cols="30" rows="5" placeholder="В свободной форме"></textarea>
+      </div>
+      </label>
+      <div class="btn-wrapper">
+        <button class="btn-write" type="submit">Отправить</button>
+      </div>
     </form>
   </div>
-  <div class="modal modal-map">
+  <div class="modal-map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1544764336004" width="940" height="448" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <button class="modal-map-close">закрыть</button>
   </div>
 </body>
 
