--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <a class="header-logo" href="index.html">
           Техномарт
         </a>
-        <form action="https://echo.htmlacademy.ru" method="post">
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <input class="search-field" type="search" name="nav-search" placeholder="Поиск:">
           <button type="submit" class="search-btn" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
               <path fill="#6a7180" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" /></svg>
           </button>
         </form>
-        <a class="top-link" href="">Закладки: 0</a>
-        <a class="top-link" href="">Корзина: 0</a>
-        <a class="top-link green" href="">Оформить заказ</a>
+        <a class="top-link link-bookmarks" href="">Закладки: 0</a>
+        <a class="top-link link-cart" href="">Корзина: 0</a>
+        <a class="top-link link-order" href="">Оформить заказ</a>
 
       </section>
     </div>
@@ -59,7 +59,7 @@
         </div>
       </section>
       <nav class="main-navigation container">
-        <a class="main-navigation-item" href="#">Главная</a>
+        <a class="main-navigation-item" href="index.html">Главная</a>
         <a class="main-navigation-item" href="#">Компания</a>
         <a class="main-navigation-item" href="catalog.html">Каталог</a>
         <a class="main-navigation-item" href="#">Новости</a>
