--- a/catalog.html
+++ b/catalog.html
@@ -368,6 +368,7 @@
     </div>
     <button class="modal-cart-close"></button>
   </div>
+  <script src="external-catalog.js"></script>
 </body>
 
 </html>
