--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
         </a>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <input class="search-field" type="search" name="nav-search" placeholder="Поиск:">
-          <button type="submit" class="search-btn" href="#">
+          <button type="submit" class="search-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
               <path fill="#6a7180" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" /></svg>
           </button>
@@ -66,6 +66,7 @@
             <a class="user-button button-user-ord" href="#">Мои заказы</a>
             <a class="user-button button-user-lk" href="#">Личный кабинет</a>
           </div>
+        </div>
       </section>
       <nav class="main-navigation container">
         <a class="main-navigation-item" href="index.html">Главная</a>
@@ -357,6 +358,7 @@
           </div>
         </aside>
       </div>
+    </div>
   </footer>
   <div class="modal-in-cart">
     <div class="notice">
