--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог магазина инструмента Техномарт</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-min.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
