--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <title>Магазин строительного инструмента Technomart</title>
-  <link rel="stylesheet" href="css/style-min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
@@ -100,19 +100,21 @@
               <label class="slider-control slider-control-1" for="slider-1"></label>
               <label class="slider-control slider-control-2" for="slider-2"></label>
             </div>
-            <button class="slider-arrow arrow-left" type="button" data-direction="left">Назад</button>
-            <button class="slider-arrow arrow-right" type="button" data-direction="right">Вперед</button>
+            <label class="slider-arrow arrow-left" for="slider-1">Назад</label>
+            <label class="slider-arrow arrow-right" for="slider-2">Вперед</label>
             <div class="slider-inner">
-              <section class="slider-item slider-item-first">
-                <h3>Дрели</h3>
-                <p>Соседям на радость!</p>
-                <a class="open-catalog" href="">Открыть каталог</a>
-              </section>
-              <section class="slider-item slider-item-second">
-                <h3>Перфораторы</h3>
-                <p>Настоящие мужские игрушки</p>
-                <a class="open-catalog" href="">Открыть каталог</a>
-              </section>
+              <div class="slider-items">
+                <section class="slider-item slider-item-first">
+                  <h3>Дрели</h3>
+                  <p>Соседям на радость!</p>
+                  <a class="open-catalog" href="">Открыть каталог</a>
+                </section>
+                <section class="slider-item slider-item-second">
+                  <h3>Перфораторы</h3>
+                  <p>Настоящие мужские игрушки</p>
+                  <a class="open-catalog" href="">Открыть каталог</a>
+                </section>
+              </div>
             </div>
           </div>
         </div>
